Fix z-index value for bootstrap modal component.

--- a/app/styles/bootstrap/dialog.scss
+++ b/app/styles/bootstrap/dialog.scss
@@ -1,5 +1,5 @@
 bootstrap-dialog {
 
-  z-index: 9000;
+  .modal { z-index: 9000; }
 
 }
